@@ -1,3 +1,8 @@
+2010-09-28  Sergio Martin <sergio.martin@artica.es>
+
+	* include/functions_html.php: Added the function print_select_groups
+	merged from trunk
+
 2010-09-22  Sancho Lerena <slerena@artica.es>
 
         * godmode/reporting/visual_console_builder.elements.php,
